--- a/package.json
+++ b/package.json
@@ -59,6 +59,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "reactflow": "^11.10.1",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "date-fns": "^2.30.0",
+    "@mui/x-date-pickers": "^6.18.1",
     "redis": "^4.6.10",
     "winston": "^3.11.0"
   },
