--- a/package.json
+++ b/package.json
@@ -46,28 +46,33 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@mui/x-date-pickers": "^6.18.1",
     "@octokit/auth-oauth-app": "^7.0.1",
     "@octokit/rest": "^20.0.2",
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "reactflow": "^11.10.1",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0",
-    "@mui/x-date-pickers": "^6.18.1",
     "redis": "^4.6.10",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
@@ -79,21 +84,18 @@
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-react": "^4.1.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "concurrently": "^8.2.2",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jsdom": "^22.1.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "vite": "^4.5.0"
   }
 }
